--- a/package.json
+++ b/package.json
@@ -2,27 +2,23 @@
   "name": "whatsapp-api-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "nodemon",
+    "start": "node app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "esbuild": "^0.10.2",
     "express": "^4.17.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.12.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.37",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
 }
