--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon app",
     "start": "node app"
   },
   "keywords": [],
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.37",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.7",
     "typescript": "^4.2.3"
   }
